--- a/compose.yml
+++ b/compose.yml
@@ -16,3 +16,19 @@ services:
     restart: always
     ports:
       - '9083:8080'
+
+  produit-service:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: produit-container
+    restart: always
+    ports:
+      - '8081:8082'
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/produits
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: rolisse
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+    depends_on:
+      - postgres
